fix refresh on rgb change

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 		// Update the palette on change
 		$('#numberColors').change(updateNumberColors);
 		$('select').change(updateBaseColorsInLCH);
-		// $('.rgbPicker').change(updateBaseColorsInRGB);
+		$('.rgbPicker').change(updateBaseColorsInRGB);
 
 		// Init
 		updateNumberColors();
